# bear-mcp-server

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs  justfile
.github/workflows/: ci.yml
.sqlx/: query-0c36ccf31762c79e1c5ff57dcb8c66c7daca143362d69b87045bb93a0895c958.json  query-452ebeaab62a82d7b32a5458fb92771fb44044a4dc4e0b88a7047084542e4055.json  query-5861c5f5ee4ca1b19ddc8706ec7643ab58b94b9f4dc043ef0f08388d25bc9799.json  query-710be4fc998c819dc6d17d5a003b9938383c44db53958e058d7024657c7b8b97.json  query-86a9b4f8a903a4a4438b5556f615ff40ccb2475cbc124528d7b9e5f0238cc22e.json  query-c911051aa15e5f7bee68174e3b75bf02c937fb2ec6f122e974e7ed651ebd1792.json  query-fd9a80e8f983f6eaba00d17453b66441ca0cdcd7d5adaf6b74b1a21f725ed160.json
scripts/: test-with-mcptools.sh
src/: bear.rs  error.rs  lib.rs  main.rs  mcp.rs  tests.rs
src/snapshots/: bear_mcp_server__tests__test_list_notes_00.snap  bear_mcp_server__tests__test_list_notes_01.snap  bear_mcp_server__tests__test_list_notes_04.snap
test_data/: database.sql  database.sqlite
